Changed playlists.py to consider only one artist for tracks More notebook documentation and data analysis

--- a/wrapped-analytics.ipynb
+++ b/wrapped-analytics.ipynb
@@ -28,6 +28,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# importing libraries\n",
+    "\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import hashlib\n",
@@ -79,13 +81,13 @@
    "outputs": [],
    "source": [
     "# Combine \"name\" and \"artists\" columns into a new column \"combined\"\n",
-    "df['combined'] = (df['name'] + ' - ' + df['artists']).str.lower() # addressing the \"the\",\"The\" issue\n",
+    "df['combined'] = (df['name'] + ' - ' + df['artists']).str.lower() # addressing the \"the\"/\"The\" issue\n",
     "\n",
-    "# Hash the combined values to create a unique identifier - some songs have different spotify IDs but are the exact same track\n",
+    "# Hash the combined values to create a unique song_id - some songs have different spotify IDs but are the exact same track\n",
     "df['song_id'] = df['combined'].apply(lambda x: hashlib.md5(x.encode()).hexdigest())\n",
     "\n",
     "df = df.drop(columns=['combined'])\n",
-    "# might need some further wrangling for tv tracks later - keeping older tracks as it is"
+    "# TODO: might need some further wrangling for tv tracks later - keeping older tracks as it is"
    ]
   },
   {
@@ -107,8 +109,8 @@
    "source": [
     "# pivoting table, for years on song_id\n",
     "\n",
-    "years = df['year'].unique().tolist() # final, don't redefine - useful later as well\n",
-    "song_info_short = ['name', 'artists']\n",
+    "years = df['year'].unique().tolist() # final value, used quite often in the data analysis section\n",
+    "\n",
     "pivot_df = df.pivot_table(index='song_id', columns='year', values='index', fill_value=0)\n",
     "\n",
     "# Reset the index to make 'song_id' a regular column\n",
@@ -244,7 +246,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Creating a df mask to get each year's top 10\n",
+    "# Getting the top 10 tracks of each year in a single dataframe\n",
     "\n",
     "# For all years, create a mask for all rows with rank < 10 in any year\n",
     "top_10s = pivot_df[pivot_df[years].apply(lambda x: x.between(1, 10)).any(axis=1)]\n",
@@ -373,6 +375,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# more with recover_df, 1. all \"climbed\" tracks and visualising the delta\n",
+    "\n",
+    "recover_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# viz. for recovering tracks and by how much did each go up (exclude off_list tracks)\n",
     "# maybe expand on recover_df, add params ('off_list/climbed', 'upward delta (if climbed)')"
    ]
@@ -383,7 +396,7 @@
    "source": [
     "#### First to Last Time\n",
     "\n",
-    "A closer look at your first Wrapped playlist. What tracks didn't return to the playlists ever again, which ones did, and which ones still found place in your latest Wrapped playlist!"
+    "A closer look at your first Wrapped playlist. What tracks didn't return to the playlists ever again, which ones did, and which ones still found a place in your latest Wrapped playlist?"
    ]
   },
   {
@@ -424,16 +437,6 @@
     "\n",
     "df_only_next['delta'] = df_only_next.apply(lambda row: row[years[1]] - row[years[0]], axis=1)\n",
     "df_only_next[['name', 'artists', years[0], years[1], 'delta']].sort_values('delta')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ls = list(range(1, 5, -1))\n",
-    "print(ls)"
    ]
   },
   {
@@ -604,7 +607,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# some sort of statistical metric to track consistency of the track in the rankings where it's present in >3"
+    "# some sort of statistical metric to track consistency of the track in the rankings where it's present in >3\n",
+    "# + most successful tracks, making it to the top of these lists and such - ARSI (check GPT)"
    ]
   },
   {
@@ -614,15 +618,6 @@
    "outputs": [],
    "source": [
     "# one list to another: which adjacent have the greatest overlap?"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# (merge with recovering tracks) comebacks (in list -> 0 -> back in list)"
    ]
   },
   {
